--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,15 +25,10 @@ jobs:
     # Check out latest commit 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        name: Checkout src repo
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
-          path: src
-          ref: main
-      
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.18.1' # The Go version to download (if necessary) and use.
+          submodules: recursive
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
