--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v1
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
