--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,5 +31,7 @@ nav:
     - organizers/gen4.md
     - organizers/gen5.md
     - organizers/gen6.md
-  - 회의록(준비중): "/"
+  - 회의록: 
+    - meetings/index.md
+    - meetings/rga2023/index.md
   - ubuntu-kr.org: https://ubuntu-kr.org
