--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - 정관:
       - legal/articles-of-incorporation/index.md
       - legal/articles-of-incorporation/history.md
+  - 개인정보처리방침: privacy-policy/index.md
   - 회계자료(준비중): "/"
   - 운영진:
     - organizers/index.md
