문서 메뉴 수정

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
       - legal/articles-of-incorporation/history.md
     - 선거관리규약:
       - legal/election-bylaw/index.md
+      - legal/election-bylaw/history.md
   - 개인정보처리방침: privacy-policy/index.md
   - 회계자료(준비중): "/"
   - 운영진:
