--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,8 @@ nav:
     - 선거관리규약:
       - legal/election-bylaw/index.md
       - legal/election-bylaw/history.md
+    - 회비규정:
+      - legal/membership-fee-regulation/index.md
   - 개인정보처리방침: privacy-policy/index.md
   - 회계자료(준비중): "/"
   - 운영진:
