--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
       - legal/election-bylaw/history.md
     - 회비규정:
       - legal/membership-fee-regulation/index.md
+      - legal/membership-fee-regulation/history.md
   - 개인정보처리방침: privacy-policy/index.md
   - 회계자료(준비중): "/"
   - 운영진:
