--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,10 @@ nav:
     - 회비규정:
       - legal/membership-fee-regulation/index.md
       - legal/membership-fee-regulation/history.md
-  - 개인정보처리방침: privacy-policy/index.md
+  - 개인정보처리방침: 
+    - privacy-policy/index.md
+    - privacy-policy/online.md
+    - privacy-policy/uck23.md
   - 회계자료: 
     - finance/index.md
     - "2022":
