2023. 09. 18. 임시총회 전자결의 내역 추가

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,5 +46,6 @@ nav:
     - organizers/gen6.md
   - 회의록: 
     - meetings/index.md
+    - meetings/ega20230918/index.md
     - meetings/rga2023/index.md
   - ubuntu-kr.org: https://ubuntu-kr.org
