--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
     - organizers/gen6.md
   - 회의록: 
     - meetings/index.md
+    - meetings/ega20231011/index.md
     - meetings/ega20230918/index.md
     - meetings/rga2023/index.md
   - ubuntu-kr.org: https://ubuntu-kr.org
