7기 운영진 정보 추가

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
     - organizers/gen4.md
     - organizers/gen5.md
     - organizers/gen6.md
+    - organizers/gen7.md
   - 회의록: 
     - meetings/index.md
     - meetings/ega20231011/index.md
