--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,8 @@ site_name_short: 공시
 site_base_url: "https://disclosures.ubuntu-kr.org/"
 site_url: "https://disclosures.ubuntu-kr.org/"
 copyright: |
-  © 2021-2024 우분투 한국 커뮤니티 (우분투 한국 로컬 커뮤니티 팀).
+  © 2021-2024 우분투한국커뮤니티 (우분투 한국 로컬 커뮤니티 팀).
+copyright_details: |
   별도 고지가 있는 경우를 제외하고, 웹 사이트 소스코드는 MIT, 웹 사이트의 컨텐츠는 CC BY-SA 4.0 라이선스로 이용 가능합니다.
   Ubuntu 및 Canonical 은 Canonical Ltd. 의 등록 상표입니다.
 repo_url: https://github.com/ubuntu-kr/disclosures.ubuntu-kr.org
