UCK24 개인정보 처리방침 추가

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
     - privacy-policy/index.md
     - privacy-policy/online.md
     - privacy-policy/uck23.md
+    - privacy-policy/uck24.md
   - 회계자료: 
     - finance/index.md
     - "2023":
