2025 정기총회 자료 추가

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
     - organizers/gen7.md
   - 회의록: 
     - meetings/index.md
+    - meetings/rga2025/index.md
     - meetings/rga2024/index.md
     - meetings/ega20231222/index.md
     - meetings/ega20231011/index.md
