11/16 회의록 공시

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
       - organizers/gen7.md
   - 회의록:
       - meetings/index.md
+      - meetings/ega20251116/index.md
       - meetings/ega20251115/index.md
       - meetings/rga2025/index.md
       - meetings/rga2024/index.md
