11/24 전자결의 공시

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
       - organizers/gen7.md
   - 회의록/공고:
       - meetings/index.md
+      - meetings/ega20251124/index.md
       - meetings/election-2025/index.md
       - meetings/ega20251116/index.md
       - meetings/ega20251115/index.md
